 - Fixed a bug where life steal attributes with decimals would not be parsed correctly.
 - Fixed a bug where playtime wouldn't increase correctly on non-60hz displays.
 - Fixed a bug where the crafted weapons/armor counters could be wrong.
 - Fixed a bug where some resistance accessory drop rates were lower than intended (1% instead of 2%).
 - Fixed a bug where INT slightly affected state application rates.
 - Fixed a bug where exiting the keyboard config menu would fade the options menu back in instead directly cutting to it.
 - Fixed a bug where magic skills used the wrong motion when casting.
 - Fixed a bug where battlers affected by Frozen I would still have their sprite move if an action sequence commanded them to.
 - Fixed a bug where vA.14.7 removed Solus Town's snow but neglected to remove the snow around it in the overworld.
 - Just like usual, a huge amount of minor bugs, textual errors, and visual issues were corrected in this release.

OUTRO

Yours truly,
Andrew

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
                             ALPHA 14.7 CHANGELOG
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
Alpha 14.7 (1/1/2022)
Current Level Cap: 20
- - - - - - - - - - - - -
Fixed a game-breaking bug where fighting the Giant Goblin after being sent by the Village Chief would completely lock a save's progression, essentially ruining the file.
This bug will be fixed in saves already affected by it, as long as old save patching is enabled.
Additionally, the snow over Solus Town has melted.
Oh, and happy new year, everyone!

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
                             ALPHA 14.6 CHANGELOG
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
Alpha 14.6 (12/22/2021)
Current Level Cap: 20
- - - - - - - - - - - - -