@@ -981,6 +981,11 @@
     "traits": [
       {
         "code": 31,
+        "dataId": 1,
+        "value": 0
+      },
+      {
+        "code": 31,
         "dataId": 9,
         "value": 0
       }
@@ -1007,6 +1012,11 @@
     "description": "Yoo what's up welcome 2 the POP POP POP SHOP",
     "etypeId": 1,
     "traits": [
+      {
+        "code": 31,
+        "dataId": 1,
+        "value": 0
+      },
       {
         "code": 31,
         "dataId": 10,
@@ -1230,6 +1240,11 @@
     "description": "A strange sword made out of many leeks. Anyone can wield it,\nbut aside from that, it doesn't seem to do anything too special.",
     "etypeId": 1,
     "traits": [
+      {
+        "code": 31,
+        "dataId": 1,
+        "value": 0
+      },
       {
         "code": 31,
         "dataId": 10,
@@ -1626,6 +1641,11 @@
     "description": "A large dark hammer that increases offensive prowess\nmore than a staff, at the cost of healing reduction.",
     "etypeId": 1,
     "traits": [
+      {
+        "code": 31,
+        "dataId": 1,
+        "value": 0
+      },
       {
         "code": 31,
         "dataId": 9,
