@@ -255,6 +255,7 @@ Bug Fixes:
  - Fixed a bug where playtime wouldn't increase correctly on non-60hz displays.
  - Fixed a bug where the crafted weapons/armor counters could be wrong.
  - Fixed a bug where some resistance accessory drop rates were lower than intended (1% instead of 2%).
+ - Fixed a bug where elemental weapons did not count as physical-elemental hits.
  - Fixed a bug where INT slightly affected state application rates.
  - Fixed a bug where exiting the keyboard config menu would fade the options menu back in instead directly cutting to it.
  - Fixed a bug where magic skills used the wrong motion when casting.
